--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -817,6 +817,21 @@ en:
       user: User
       user_email: User email
       wheel_size: Wheel size
+    options_for_select:
+      color:
+        black: Black
+        blue: Blue
+        brown: Brown
+        green: Green
+        orange: Orange
+        pink: Pink
+        purple: Purple
+        red: Red
+        silver_gray_or_bare_metal: Silver, Gray or Bare Metal
+        stickers_tape_or_other_cover_up: Stickers tape or other cover-up
+        teal: Teal
+        white: White
+        yellow_or_gold: Yellow or Gold
   bikes:
     bike:
       location: Location
