Kill superfluous options_for_select, update key name

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -817,7 +817,7 @@ en:
       user: User
       user_email: User email
       wheel_size: Wheel size
-    options_for_select:
+    select_options:
       color:
         black: Black
         blue: Blue
