--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -832,6 +832,58 @@ nl:
         teal: TRME Teal
         white: TRME White
         yellow_or_gold: TRME Yellow or Gold
+      ctype:
+        aero_bars_extensions_bar_ends: TRME aero bars/extensions/bar ends
+        axle_nuts: TRME axle nuts
+        bashguard_chain_guide: TRME bashguard/chain guide
+        basket: TRME basket
+        bell_noisemaker: TRME bell/noisemaker
+        bottom_bracket: TRME bottom bracket
+        brake: TRME brake
+        brake_cable: TRME brake cable
+        brake_lever: TRME brake lever
+        brake_pad: TRME brake pad
+        brake_rotor: TRME brake rotor
+        chain: TRME chain
+        chain_tensioners: TRME chain tensioners
+        chainrings: TRME chainrings
+        cog_cassette_freewheel: TRME cog/cassette/freewheel
+        computer: TRME computer
+        crankset: TRME crankset
+        derailleur: TRME derailleur
+        detangler: TRME detangler
+        fairing: TRME fairing
+        fender: TRME fender
+        fork: TRME fork
+        generator_dynamo: TRME generator/dynamo
+        grips_tape: TRME grips/tape
+        handlebar: TRME handlebar
+        headset: TRME headset
+        hub: TRME hub
+        hub_guard: TRME hub guard
+        kickstand: TRME kickstand
+        lights: TRME lights
+        other: TRME other
+        pedals: TRME pedals
+        pegs: TRME pegs
+        rack: TRME rack
+        rear_suspension: TRME rear suspension
+        rim: TRME rim
+        saddle: TRME saddle
+        seatpost: TRME seatpost
+        seatpost_clamp: TRME seatpost clamp
+        shift_and_brake_lever: TRME shift and brake lever
+        shift_cable: TRME shift cable
+        shifter: TRME shifter
+        spokes: TRME spokes
+        stem: TRME stem
+        tire: TRME tire
+        toe_clips: TRME toe clips
+        training_wheels: TRME training wheels
+        tube: TRME tube
+        unknown: TRME unknown
+        water_bottle_cage: TRME water bottle cage
+        wheel: TRME wheel
   bikes:
     bike:
       location: TRME Location
