--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1334,7 +1334,7 @@ en:
     - Fri
     - Sat
     abbr_month_names:
-    -
+    - 
     - Jan
     - Feb
     - Mar
@@ -1360,7 +1360,7 @@ en:
       long: "%B %d, %Y"
       short: "%b %d"
     month_names:
-    -
+    - 
     - January
     - February
     - March
@@ -3260,10 +3260,10 @@ en:
       new:
         1_email_per_line: 1 email per line
         admin_of_organization: Admin of organization
-        email_youre_inviting: Email you're inviting
         automatic_passwordless: >-
-          Your organization is set up with automatic passwordless log in. The Emails you
-          add will receive a message with a link to sign in.
+          Your organization is set up with automatic passwordless log in. The Emails
+          you add will receive a message with a link to sign in.
+        email_youre_inviting: Email you're inviting
         invite_multiple_emails: Invite multiple emails
         invite_user: Invite user
         member_of_organization: Member of organization
