--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -928,8 +928,11 @@ nl:
       thanks: TRME Thanks!
       your_order_is_pending: TRME Your order is pending.
     edit_bike_details:
+      a_qr_sticker: TRME a QR Sticker
+      add_a_sticker_label_html: TRME Add %{sticker_information_link}
       bike_name: TRME Bike Name
       choose_material: TRME Choose material
+      existing_stickers: TRME Existing stickers
       frame_size: TRME Frame size
       general_description: TRME General description
       main_frame_material: TRME Main frame material
@@ -973,8 +976,9 @@ nl:
     edit_groups:
       add_an_organization: TRME Add another organization
       are_you_part_of_a_school_want_to_bolster_: >-
-        TRME Are you a student of one of our school or university partners? Want to let a local advocacy organization know that you love them?
-        Add the organization here.
+        TRME Are you a student of one of our school or university partners? Want to
+        let a local advocacy organization know that you love them? Add the organization
+        here.
       can_edit_this_bike: TRME Can edit this %{bike_type}
       choose_organization: TRME Choose organization
       creation_organization: TRME Creation organization
