--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -923,8 +923,11 @@ en:
       thanks: Thanks!
       your_order_is_pending: Your order is pending.
     edit_bike_details:
+      a_qr_sticker: a QR Sticker
+      add_a_sticker_label_html: Add %{sticker_information_link}
       bike_name: Bike Name
       choose_material: Choose material
+      existing_stickers: Existing stickers
       frame_size: Frame size
       general_description: General description
       main_frame_material: Main frame material
@@ -966,10 +969,11 @@ en:
       wheels: Wheels
       wide: Wide
     edit_groups:
-      add_an_organization: Add an organization
+      add_an_organization: Add another organization
       are_you_part_of_a_school_want_to_bolster_: >-
-        Are you part of a school? Want to bolster a local advocacy organization? Add
-        the organization here.
+        Are you a student of one of our school or university partners? Want to let
+        a local advocacy organization know that you love them? Add the organization
+        here.
       can_edit_this_bike: Can edit this %{bike_type}
       choose_organization: Choose organization
       creation_organization: Creation organization
