--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -832,6 +832,75 @@ en:
         teal: Teal
         white: White
         yellow_or_gold: Yellow or Gold
+      ctype:
+        aero_bars_extensions_bar_ends: aero bars/extensions/bar ends
+        axle_nuts: axle nuts
+        bashguard_chain_guide: bashguard/chain guide
+        basket: basket
+        bell_noisemaker: bell/noisemaker
+        bottom_bracket: bottom bracket
+        brake: brake
+        brake_cable: brake cable
+        brake_lever: brake lever
+        brake_pad: brake pad
+        brake_rotor: brake rotor
+        chain: chain
+        chain_tensioners: chain tensioners
+        chainrings: chainrings
+        cog_cassette_freewheel: cog/cassette/freewheel
+        computer: computer
+        crankset: crankset
+        derailleur: derailleur
+        detangler: detangler
+        fairing: fairing
+        fender: fender
+        fork: fork
+        generator_dynamo: generator/dynamo
+        grips_tape: grips/tape
+        handlebar: handlebar
+        headset: headset
+        hub: hub
+        hub_guard: hub guard
+        kickstand: kickstand
+        lights: lights
+        other: other
+        pedals: pedals
+        pegs: pegs
+        rack: rack
+        rear_suspension: rear suspension
+        rim: rim
+        saddle: saddle
+        seatpost: seatpost
+        seatpost_clamp: seatpost clamp
+        shift_and_brake_lever: shift and brake lever
+        shift_cable: shift cable
+        shifter: shifter
+        spokes: spokes
+        stem: stem
+        tire: tire
+        toe_clips: toe clips
+        training_wheels: training wheels
+        tube: tube
+        unknown: unknown
+        water_bottle_cage: water bottle cage
+        wheel: wheel
+      stolen_record:
+        bike_was_not_locked: Bike was not locked
+        cable_lock: Cable lock
+        chain_with_padlock: Chain with padlock
+        heavy_duty_bicycle_security_chain: Heavy duty bicycle security chain
+        lock_is_missing_along_with_the_bike: Lock is missing, along with the bike
+        lock_was_cut_and_left_at_the_scene: Lock was cut, and left at the scene
+        lock_was_opened_and_left_unharmed_at_the_scene: Lock was opened, and left
+          unharmed at the scene
+        not_locked: Not locked
+        object_that_bike_was_locked_to_was_broken_removed_or_otherwise_compromised: Object
+          that bike was locked to was broken, removed, or otherwise compromised
+        other: Other
+        other_situation_please_describe_below: Other situation, please describe below
+        two_u_locks: Two U-locks
+        u_lock: U-lock
+        u_lock_and_cable: U-lock and cable
   bikes:
     bike:
       location: Location
