--- a/config/locales/customer_mailer.en.yml
+++ b/config/locales/customer_mailer.en.yml
@@ -1,14 +1,21 @@
+---
 en:
   customer_mailer:
-    welcome_email:
-      subject: Welcome to Bike Index!
+    additional_email_confirmation:
+      subject: Confirm your additional email
     confirmation_email:
       subject: Please confirm your Bike Index email!
     invoice_email:
       subject: Thank you for supporting Bike Index!
-    password_reset_email:
-      subject: Instructions to reset your password
     magic_login_link_email:
       subject: Sign in to Bike Index
-    additional_email_confirmation:
-      subject: Confirm your additional email
+    password_reset_email:
+      subject: Instructions to reset your password
+    recovered_from_link:
+      subject: Your %{biketype} has been marked recovered!
+    stolen_notification_email:
+      subject: Stolen bike contact
+    updated_terms_email:
+      subject: Bike Index Terms and Privacy Policy Update
+    welcome_email:
+      subject: Welcome to Bike Index!
